now compiling but need to handle textures with " renderer\

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,7 @@ else()
     elseif (CMAKE_SYSTEM_NAME STREQUAL Windows)
         # find_package(ASSIMP REQUIRED)
         # target_include_directories(Application PRIVATE ${ASSIMP_INCLUDE_DIR})
-        target_link_libraries(Application PRIVATE libglfw3_windows.a libassimp)
+        target_link_libraries(Application PRIVATE libglfw3 libassimp)
         message("Linked to windows")
     endif ()
 endif()
