--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,37 +23,44 @@ target_include_directories(Application PRIVATE Application/src/vendor/include)
 
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-
 	target_link_directories(Application PRIVATE Application/libs/glfw/)
 
+    find_package(assimp)
+    if (assimp_FOUND)
+        target_link_libraries (Application PRIVATE  assimp::assimp)
+        message("Assimp found")
+        add_compile_definitions(USEASSIMP)
+    endif(assimp_FOUND)
 
     target_link_libraries(Application PRIVATE glfw3.lib)
     message("Linked to windows using MSVC")
 
-
 else()
-    if (CMAKE_SYSTEM_NAME STREQUAL Linux)        
-        target_link_libraries(Application PRIVATE glfw pthread dl GL X11 assimp)
-        find_package(assimp REQUIRED)
-if (assimp_FOUND)
-    link_directories(${ASSIMP_LIBRARY_DIRS})
-    target_include_directories(Application PRIVATE ${ASSIMP_INCLUDE_DIRS})
-    target_link_libraries (Application PRIVATE ${ASSIMP_LIBRARIES})
-    message("Assimp found")
-    add_compile_definitions(USEASSIMP)
 
-endif(assimp_FOUND)
+    if (CMAKE_SYSTEM_NAME STREQUAL Linux)        
+        target_link_libraries(Application PRIVATE glfw pthread dl GL X11)
+
+        find_package(assimp)
+        if (assimp_FOUND)
+            link_directories(${ASSIMP_LIBRARY_DIRS})
+            target_include_directories(Application PRIVATE ${ASSIMP_INCLUDE_DIRS})
+            target_link_libraries (Application PRIVATE  assimp::assimp)
+            message("Assimp found")
+            add_compile_definitions(USEASSIMP)
+        endif(assimp_FOUND)
+
         message("Linked to Linux")
 
-    elseif (CMAKE_SYSTEM_NAME STREQUAL Windows)     
-    if (assimp_FOUND)
-    link_directories(${ASSIMP_LIBRARY_DIRS})
-    target_include_directories(Application PRIVATE ${ASSIMP_INCLUDE_DIRS})
-    target_link_libraries (Application PRIVATE ${ASSIMP_LIBRARIES})
-    add_compile_definitions(USEASSIMP)
-    message("Assimp found")
-endif(assimp_FOUND)
-        target_link_libraries(Application PRIVATE libglfw3 asimp)
+    elseif (CMAKE_SYSTEM_NAME STREQUAL Windows)   
+        find_package(assimp )
+        if (assimp_FOUND)
+            link_directories(${ASSIMP_LIBRARY_DIRS})
+            target_include_directories(Application PRIVATE ${ASSIMP_INCLUDE_DIRS})
+            target_link_libraries (Application PRIVATE ${ASSIMP_LIBRARIES})
+            add_compile_definitions(USEASSIMP)
+            message("Assimp found")
+        endif(assimp_FOUND)
+        target_link_libraries(Application PRIVATE libglfw3)
         message("Linked to windows")
     endif ()
 endif()
